se ajusta la ruta
